--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,6 @@
 	position: absolute;
     width: 100%;
     text-align: center;
-    transition: top 0.5s;
+    transition: transform 0.5s;
     margin-top: -5px;
 }
