--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,9 @@
     width: 100%;
     text-align: center;
     transition: transform 0.5s;
-    transition: -moz-transform 0.5s;
-    transition: -webkit-transform 0.5s;
+    -webkit-transition: transform 0.5s;
+    -moz-transition: transform 0.5s;
+    -ms-transition: transform 0.5s;
+    -o-transition:  transform 0.5s;
     margin-top: -35px;
 }
