--- a/css/main.css
+++ b/css/main.css
@@ -5,15 +5,15 @@
 #clock {
     left: 50%;
     top: 50%;
-    width: 970px;
+	width: 970px;
     height: 240px;
     margin-top: -120px;
     margin-left: -485px;
-    /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+	/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
     font-family: 'Roboto', sans-serif;
-    font-size: 170pt;
+	font-size: 170pt;
     font-weight: bold;
-    position: absolute;
+	position: absolute;
     overflow: hidden;
 }
 
@@ -21,7 +21,7 @@
     position: absolute;
     width: 140px;
     height: 240px;
-    box-shadow: inset 0px 6px 16px 0px rgba(0,0,0,0.6);
+    box-shadow: inset 0px 6px 16px 0px rgba(0,0,0,0.4);
     border-radius: 16px;
     overflow: hidden;
     background: linear-gradient(0deg, gray, white, white, white, gray);
@@ -29,7 +29,6 @@
 
 .specular {
     background: linear-gradient(0deg, transparent, transparent, rgba(255, 255, 255, 0.3), transparent, transparent);
-    box-shadow: none;
 }
 
 .colon {
@@ -37,20 +36,18 @@
     /*font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;*/
     font-family: 'Open Sans', sans-serif;
     font-size: 150pt;
-    margin-top: -33px;
+    margin-top: -40px;
     margin-left: -3px;
     text-align: center;
     width: 50px; 
 }
 
 .number_band {
-    position: absolute;
+	position: absolute;
     width: 100%;
     text-align: center;
     transition: transform 0.5s;
-    -webkit-transition: transform 0.5s;
-    -moz-transition: transform 0.5s;
-    -ms-transition: transform 0.5s;
-    -o-transition:  transform 0.5s;
-    margin-top: -35px;
+    transition: -moz-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    margin-top: -15px;
 }
