--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,6 @@
     width: 100%;
     text-align: center;
     transition: transform 0.5s;
-    transition: -moz-transform 0.5s;
-    transition: -webkit-transform 0.5s;
+    -webkit-transition: -webkit-transform 0.5s;
     margin-top: -15px;
 }
